<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:contentPaddingTop="20dp"
    card_view:contentPaddingBottom="20dp"
    card_view:cardCornerRadius="4dp"
    card_view:cardBackgroundColor="@color/banner_background"
    card_view:cardElevation="2dp"
    app:cardUseCompatPadding="true"
    >


    <LinearLayout
        android:id="@+id/exercise_banner_linear_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/banner_background"
        android:focusable="true"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        >

        <TextView
            android:id="@+id/exercise_name_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            tools:text="Squat_p"
            android:textAlignment="center"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:focusable="true"
            />

        <TextView
            android:id="@+id/previous_exercise_weight_tv"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:hint="@string/previous_weight_hint"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            android:textStyle="normal|bold"
            tools:text="155 kg"
            android:textAlignment="center"
            android:focusable="true"
            />

        <TextView
            android:id="@+id/value_unit_symbol1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textAlignment="center"
            android:text="@string/pref_units_default"
            android:textSize = "17sp"
            android:textColor="@android:color/white"
            />

        <EditText
            android:id="@+id/current_exercise_weight_tv"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:inputType="numberDecimal"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:clickable="true"
            android:hint="@string/pref_units_default"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            android:textAlignment="center"
            android:background="@android:color/transparent"/>

        <TextView
            android:id="@+id/value_unit_symbol2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textAlignment="center"
            android:text="@string/weight_unit"
            android:textSize = "17sp"
            android:textColor="@android:color/white"
            />

        <TextView
            android:id="@+id/exercise_info_tv"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            android:textAlignment="center"
            android:focusable="true"
            />

        <Button
            android:id="@+id/undo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_undo"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:layout_gravity="end|center_vertical"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            />

    </LinearLayout>

</android.support.v7.widget.CardView>