<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:CircleProgressView="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.example.pieter_jan.SS_fitness_tracker.MainActivity">

    <FrameLayout
        android:id="@+id/fl_interceptor"
        android:descendantFocusability="blocksDescendants"
        android:layout_width="wrap_content"
        android:layout_height="184dp"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp"/>

    <com.example.pieter_jan.SS_fitness_tracker.DateCarousel
        android:id="@+id/dateCarouselLayout"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        tools:layout_editor_absoluteY="41dp"
        tools:layout_editor_absoluteX="8dp"/>


    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/multiple_actions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        fab:fab_addButtonColorNormal="@color/white"
        fab:fab_addButtonColorPressed="@color/white_pressed"
        fab:fab_addButtonPlusIconColor="@color/half_black"
        fab:fab_labelStyle="@style/menu_labels_style"
        tools:layout_editor_absoluteY="200dp"
        tools:layout_editor_absoluteX="144dp">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/action_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/white"
            fab:fab_title="@string/add_workout_a"
            fab:fab_colorPressed="@color/white_pressed"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/action_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/white"
            fab:fab_title="@string/add_workout_b"
            fab:fab_colorPressed="@color/white_pressed"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/action_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/white"
            fab:fab_title="@string/add_squat"
            fab:fab_colorPressed="@color/white_pressed"/>

    </com.getbase.floatingactionbutton.FloatingActionsMenu>


    <at.grabner.circleprogress.CircleProgressView
        android:id="@+id/circleView"
        android:layout_width="130dp"
        android:layout_height="150dp"
        android:paddingTop="20dp"
        CircleProgressView:cpv_autoTextSize="true"
        CircleProgressView:cpv_barColor="@color/colorPrimary"
        CircleProgressView:cpv_barWidth="16dp"
        CircleProgressView:cpv_innerContourSize="0dp"
        CircleProgressView:cpv_outerContourSize="0dp"
        CircleProgressView:cpv_rimColor="@color/colorPrimaryLight"
        CircleProgressView:cpv_rimWidth="16dp"
        CircleProgressView:cpv_spinColor="@color/colorPrimary"
        CircleProgressView:cpv_textColor="@color/colorPrimaryDark"
        CircleProgressView:cpv_textScale="1"
        CircleProgressView:cpv_unitColor="@color/colorPrimaryLight"
        CircleProgressView:cpv_unitPosition="right_bottom"
        tools:layout_editor_absoluteY="367dp"
        tools:layout_editor_absoluteX="141dp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/exercises_recycler_view"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:visibility="visible"
        tools:layout_editor_absoluteY="200dp"
        tools:layout_editor_absoluteX="8dp"/>


</android.support.constraint.ConstraintLayout>
